# raytracer-challenge-rs

./: .gitignore  Cargo.toml  README.md
raytracer/: Cargo.toml
raytracer/src/: bounding_box.rs  camera.rs  canvas.rs  color.rs  lib.rs  light.rs  matrix.rs  point.rs  ppm.rs  ray.rs  vector.rs  world.rs
raytracer/src/geometry/: intersection.rs  mod.rs
raytracer/src/geometry/shape/: cone.rs  csg.rs  cube.rs  cylinder.rs  group.rs  mod.rs  plane.rs  smooth_triangle.rs  sphere.rs  test_shape.rs  triangle.rs
raytracer/src/image/: mod.rs  png.rs  ppm.rs
raytracer/src/pattern/: stripe.rs  test_pattern.rs
scene-parser/: Cargo.toml
scene-parser/examples/: cover.yml  reflect-refract.yml
scene-parser/src/: error.rs  lib.rs
src/: camera.rs  canvas.rs  color.rs  lib.rs  light.rs  material.rs  matrix.rs  point.rs  ppm.rs  ray.rs  transform.rs  tuple.rs  vector.rs  world.rs
src/geometry/: cone.rs  cube.rs  cylinder.rs  intersection.rs  mod.rs  plane.rs  shape.rs  sphere.rs  test_shape.rs
src/geometry/shape/: cone.rs  cube.rs  cylinder.rs  group.rs  mod.rs  plane.rs  smooth_triangle.rs  sphere.rs  test_shape.rs  triangle.rs
src/obj_parser/: mod.rs
src/pattern/: checkers.rs  gradient.rs  mod.rs  ring.rs  stripe.rs  test_pattern.rs
