[package]
name = "raytracer"
version = "0.1.0"
authors = ["Thomas Linford <linford.t@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
image = "0.23.13"
uuid = { version = "0.8", features = ["v4"] }
